--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,15 +1,25 @@
-/* Global or component-specific CSS */
+/* Cloudy Effect */
+.cloudy-effect {
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.6),
+      rgba(255, 255, 255, 0.4)
+    ),
+    url("assets/images/cloud.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 /* Sunny Effect */
 .sunny-effect {
-  background: linear-gradient(to top, #3b45a380 0%, #8181 100%);
+  background: linear-gradient(to top, #f7f7f7, #f9d400);
   background-size: cover;
-  animation: sun-shine 5s infinite;
+  animation: sunshine 5s infinite;
 }
 
 /* Rainy Effect */
 .rainy-effect {
-  background: linear-gradient(to bottom, #a0c4ff 0%, #0e4b70 100%);
+  background: linear-gradient(to bottom, #a0c4ff, #0e4b70);
   background-size: cover;
   position: relative;
 }
@@ -32,7 +42,55 @@
   animation: rain-fall 1s linear infinite;
 }
 
-@keyframes sun-shine {
+/* Night Effect */
+.night-effect {
+  background: linear-gradient(to bottom, #1c1c1c, #4b4b4b);
+  background-size: cover;
+  position: relative;
+}
+
+/* Thunder Effect */
+.thunder-effect {
+  background: linear-gradient(to bottom, #4a4a4a, #1e1e1e);
+  background-size: cover;
+  position: relative;
+}
+
+.thunder-effect::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.4) 20%,
+    transparent 80%
+  );
+  opacity: 0.7;
+  animation: thunder-flash 1s infinite;
+}
+
+@keyframes sunshine {
+  0% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+@keyframes rain-fall {
+  to {
+    transform: translateY(100%);
+  }
+}
+
+@keyframes thunder-flash {
   0% {
     opacity: 0.7;
   }
@@ -41,11 +99,5 @@
   }
   100% {
     opacity: 0.7;
-  }
-}
-
-@keyframes rain-fall {
-  to {
-    transform: translateY(100%);
   }
 }
